feat: placed pdf file

--- a/Actividad 1.ipynb
+++ b/Actividad 1.ipynb
@@ -296,10 +296,45 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af53d76c",
+   "id": "eadfe24a",
    "metadata": {},
    "source": [
-    "# Resumen del dataset\n"
+    "### Descripción de cinco columnas del dataset\n",
+    "\n",
+    "1. **Track**: corresponde al nombre de la canción.\n",
+    "2. **Artist**: indica el nombre del artista o grupo musical.\n",
+    "3. **Track Score**: representa una puntuación general basada en el rendimiento de la canción en distintas plataformas.\n",
+    "4. **Spotify Popularity**: mide la popularidad de la canción en Spotify en una escala de 0 a 100.\n",
+    "5. **Apple Music Playlist Count**: muestra cuántas listas de reproducción de Apple Music incluyen la canción.\n",
+    "\n",
+    "### Análisis complementario\n",
+    "\n",
+    "Además del análisis realizado en este notebook, se generó un reporte exploratorio en formato HTML utilizando `ydata_profiling`. Este archivo (`spotify_songs_profile_report.html`) contiene detalles ampliados como:\n",
+    "\n",
+    "- Distribuciones por columna\n",
+    "- Porcentaje de valores nulos\n",
+    "- Correlaciones entre variables numéricas\n",
+    "- Detección de columnas constantes o duplicadas\n",
+    "\n",
+    "Entre los hallazgos más relevantes:\n",
+    "\n",
+    "- La columna `Track Score` presenta una gran dispersión, con un valor máximo considerablemente mayor al promedio, lo que sugiere la presencia de outliers.\n",
+    "- `Spotify Popularity` tiene una distribución más centrada, siendo la mayoría de canciones moderadamente populares.\n",
+    "- Se identificaron varias columnas con alta cantidad de valores únicos (como `ISRC`), útiles como identificadores pero no como variables predictoras.\n",
+    "- No se detectaron valores nulos en las columnas clave utilizadas en el análisis propuesto.\n",
+    "\n",
+    "### Columnas propuestas para un modelo de machine learning\n",
+    "\n",
+    "En el contexto del dataset, se propone construir un modelo de machine learning que prediga la popularidad de una canción en Spotify. Las siguientes columnas podrían utilizarse como variables de entrada:\n",
+    "\n",
+    "- Track Score  \n",
+    "- Apple Music Playlist Count  \n",
+    "- Deezer Playlist Count  \n",
+    "- Amazon Playlist Count\n",
+    "\n",
+    "Estas variables reflejan el desempeño de la canción en distintas plataformas de streaming. Un modelo podría aprender patrones entre estas métricas y predecir el valor esperado de `Spotify Popularity` para nuevas canciones.\n",
+    "\n",
+    "El modelo sería útil para anticipar el potencial de éxito de lanzamientos futuros o para apoyar decisiones en estrategias de marketing musical."
    ]
   }
  ],
